# manpass

./: .gitignore  CMakeLists.txt  README.md  main.cpp
GoogleTests/: CMakeLists.txt  manpass_tests.cpp  testoftest.cpp
include/: Command.h  CommandArguments.h  Controller.h  Cryptography.h  Parser.h  Storage.h
include/crypto/: Cryptography.h  EncryptedBlob.h  GetMasterPassword.h
include/parser/: CommandArguments.h  Parser.h
include/vault/: CredentialEntry.h  Entry.h  Folder.h  NoteEntry.h  Vault.h
src/: Command.cpp  Controller.cpp  Cryptography.cpp  Parser.cpp  Storage.cpp
src/crypto/: Cryptography.cpp  GetMasterPassword.cpp
src/json/: json_deserialization.cpp  json_serialization.cpp
src/parser/: Parser.cpp
src/vault/: CredentialEntry.cpp  Folder.cpp  NoteEntry.cpp  Vault.cpp
